Finalize Jomra AI Agent System v2.0.0 with optimizations and CI fixes
- Fix the base64 decoding error in GitHub Actions workflow using printf and --ignore-garbage.
- Replace Map.of() with Android-compatible map collections for minSdk 24 support.
- Integrate functional APIClient with OkHttp and Gson for external connectivity.
- Add NotificationTool for system-level alerts and integrate it into the agent ecosystem.
- Optimize TFLite inference with GpuDelegate and NNAPI acceleration support.
- Refine ToolAgent logic to extract actual parameters from user queries.
- Clean up build features and finalize ProGuard rules for release builds.
- Ensure both debug and release builds package all necessary AI models.